Fix nowrap in comment list

--- a/public/stylesheets/layout_2008-07/content.css
+++ b/public/stylesheets/layout_2008-07/content.css
@@ -71,6 +71,11 @@ form
 	font-weight: bold;
 }
 
+.nowrap
+{
+  white-space:nowrap;
+}
+
 /* flash[:notice] */
 #notice_div_id
 {
